# QNet-Blockchain

./: .dockerignore  .gitignore  ACTIVATION_RESTRICTIONS_FIXED.txt  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DOCS_CLEANUP_COMPLETE.txt  DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_CLEANUP_PLAN.md  Dockerfile.production  Dockerfile.test  ECONOMIC_FIXES_COMPLETE.txt  ECONOMIC_MODEL_FIXES_SUMMARY.md  FINAL_PRODUCTION_DEPLOYMENT_STATUS.md  GITHUB_SETUP_INSTRUCTIONS.md  GIT_COMMIT_SUCCESS.txt  LICENSE  NODE_ACTIVATION_RESTRICTIONS_REPORT.md  PRIVATE_REPO_STRATEGY.md  PRODUCTION_FEE_SYSTEM_COMPLETE.md  QNet_Whitepaper.md  README.md  RELEASE_NOTES.md  RESTRUCTURE_COMPLETE.md  SECURITY_REPORT.md  TESTNET_LAUNCH_GUIDE.md  Tokenomics.md  WALLET_FIXED_JULY_2025.md  build-log.txt  check_and_deploy_new.sh  check_endpoints.ps1  clean-project.ps1  commits_list.txt  deploy_immutable.sh  deploy_instructions.md  diff_p2p_669.txt  docker-compose.production.yml  docker-compose.testnet.yml  final_contract_upgrade.sh  fix-site.bat  fix_npm_vulnerabilities.sh  (+24 more)
applications/qnet-mobile/rust-dilithium/: Cargo.toml  README.md  build.sh
applications/qnet-mobile/rust-dilithium/src/: lib.rs
audit/: Cargo.toml  FINAL_AUDIT_REPORT.md  FULL_AUDIT_STRUCTURE.md  README.md  run_audit.bat  run_audit.ps1  run_audit.sh  run_full_audit.ps1  test_results.txt
audit/01_storage/: storage_audit_fixed.rs
audit/02_reputation/: reputation_audit.rs
audit/04_consensus/: consensus_scalability_tests.rs
audit/results/: 01_storage_audit_report.md  02_reputation_audit_report.md  03_consensus_audit_report.md  04_scalability_audit_report.md  05_critical_attacks_report.md  06_activation_security_report.md
audit/tests/: activation_security_test.rs  consensus_audit.rs  consensus_scalability_tests.rs  critical_attacks_test.rs  reputation_audit.rs
core/qnet-consensus/: Cargo.toml  pyproject.toml
core/qnet-consensus/benches/: consensus_bench.rs
core/qnet-consensus/src/: batch_operations.rs  burn_security.rs  commit_reveal.rs  consensus_crypto.rs  dynamic_timing.rs  errors.rs  fork_choice.rs  fork_manager.rs  fork_resolution.rs  kademlia.rs  lazy_rewards.rs  leader_selection.rs  lib.rs  macro_consensus.rs  metrics.rs  python.rs  python_bindings.rs  reputation.rs  reward_integration.rs  sharded_consensus.rs  types.rs
core/qnet-consensus/tests/: compare_performance.py  integration_test.rs
core/qnet-core/: Cargo.toml  QNET_WALLET_SECURITY_AUDIT_2025.md  README.md
core/qnet-core/src/: config.py  final_test.py  lib.rs  solana_bridge.py
core/qnet-core/src/core/: safe_serialization.py
core/qnet-core/src/crypto/: __init__.py  dilithium.py  final_security_audit.py  hardware_acceleration.rs  hash.py  kyber.py  mod.rs  test_crypto_suite.py
core/qnet-core/src/security/: file_encryption.rs  mod.rs
core/qnet-core/src/storage/: mod.rs  optimized_storage.rs  security_enhanced.rs
core/qnet-core/test/: run_tests.py  test_activation.py
core/qnet-mempool/: Cargo.toml  README.md  pyproject.toml
core/qnet-mempool/benches/: mempool_bench.rs
core/qnet-mempool/src/: config.rs  errors.rs  eviction.rs  fast_validator.rs  lib.rs  mempool.rs  metrics.rs  mev_protection.rs  priority.rs  python.rs  simple_mempool.rs  validation.rs
core/qnet-mempool/tests/: mev_tests.rs
core/qnet-state/: Cargo.toml  pyproject.toml
core/qnet-state/benches/: state_bench.rs
core/qnet-state/src/: account.rs  block.rs  errors.rs  lib.rs  mempool.rs  python_bindings.rs  state.rs  state_db.rs  state_manager.rs  transaction.rs  transaction_backup.rs  transaction_minimal.rs
development/qnet-contracts/1dev-burn-contract/: Anchor.toml  Cargo.toml  DEPLOYMENT.md  deploy.sh  package-lock.json
development/qnet-contracts/1dev-burn-contract/src/: errors.rs  lib.rs  state.rs  state_updated.rs
development/qnet-contracts/1dev-burn-contract/tests/: burn_tracker_test.rs
development/qnet-contracts/qna-burn-contract/: Anchor.toml  Cargo.toml  README.md
development/qnet-contracts/qna-burn-contract/src/: errors.rs  lib.rs  state.rs  state_updated.rs
development/qnet-contracts/qna-burn-contract/tests/: burn_tracker_test.rs
development/qnet-contracts/simple-burn-tracker/: Cargo.toml  deploy.bat
development/qnet-integration/: Cargo.toml  Dockerfile.production  build_errors.txt  genesis-nodes.json.example
development/qnet-integration/benches/: README.md  full_benchmark.rs  poh_benchmark.rs
development/qnet-integration/node1_data/: IDENTITY  LOG
development/qnet-integration/node2_data/: IDENTITY  LOG  LOG.old.1748933783303113
development/qnet-integration/node_data/: IDENTITY  LOG  LOG.old.1753359681441624  LOG.old.1753710923116424  LOG.old.1753757158881187  LOG.old.1753761278407188  LOG.old.1753761356382283  LOG.old.1753761585212755  LOG.old.1753761993053417  LOG.old.1753763189470676  LOG.old.1753764148222268  LOG.old.1753764344477544  LOG.old.1753764962241643  LOG.old.1753765902829831  LOG.old.1753766367906908  LOG.old.1753766734917195  LOG.old.1753767584810293  LOG.old.1753772638920381  LOG.old.1753773439366473  LOG.old.1753773789345861  MANIFEST-000005  MANIFEST-000087
development/qnet-integration/scripts/: update-genesis-nodes.sh
development/qnet-integration/src/: activation_validation.rs  archive_manager.rs  auto_p2p_selector.rs  batch_processor.rs  blockchain.rs  contract_vm.rs  crypto_integration.rs  errors.rs  genesis.rs  genesis_constants.rs  hybrid_crypto.rs  hybrid_sealevel.rs  key_manager.rs  lib.rs  microblock_tests.rs  network.rs  network_config.rs  node.rs  p2p_extensions.rs  pre_execution.rs  quantum_crypto.rs  quantum_poh.rs  reward_sharding.rs  rpc.rs  storage.rs  tower_bft.rs  unified_p2p.rs  validator.rs  vrf.rs  vrf_hybrid.rs
development/qnet-integration/tests/: crypto_security_test.rs
infrastructure/qnet-api/: Cargo.toml  README.md  api_server_rust.py  main.py  requirements.txt
infrastructure/qnet-api/src/: config.rs  error.rs  main.rs  state.rs  websocket.rs
infrastructure/qnet-api/src/handlers/: account.rs  (+6 more)
infrastructure/qnet-api/tests/: integration_test.rs
testing/integration/qnet_node/: Cargo.toml  README.md
(+706 files in other folders)
