[workspace]
resolver = "2"
members = [
    "core/qnet-core",
    "core/qnet-state",
    "core/qnet-consensus", 
    "core/qnet-mempool",
    "core/qnet-sharding",
    "development/qnet-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
license = "MIT"
repository = "https://github.com/qnet/qnet"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sha2 = "0.10.8"
rand = "0.8.5"
async-trait = "0.1.75"

# Modern production cryptography compatible with edition 2021
ed25519-dalek = { version = "2.0.0", features = ["std"] }
curve25519-dalek = "4.1.3"
blake3 = "1.5.0"
hex = "0.4.3"

# Post-quantum cryptography dependencies
pqcrypto = "0.18"
pqcrypto-dilithium = "0.5"

# Sharding and consensus dependencies
bincode = "1.3.3"
crossbeam-channel = "0.5"

# Performance and networking
dashmap = "5.5"
parking_lot = "0.12"

# Hardware acceleration
rayon = "1.10"
simd-adler32 = "0.3"
crc32fast = "1.3"

# Memory optimization
mimalloc = "0.1"
jemalloc = "0.5"

# Production-optimized profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false

[profile.production]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = true

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true
incremental = true

[profile.test]
opt-level = 2
debug = true
overflow-checks = true 