[package]
name = "qnet-audit"
version = "0.1.0"
edition = "2021"
authors = ["QNet Security Team"]
description = "Security and performance audit suite for QNet blockchain"

[dependencies]
# Core QNet dependencies
qnet-state = { path = "../core/qnet-state" }
qnet-consensus = { path = "../core/qnet-consensus" }
qnet-mempool = { path = "../core/qnet-mempool" }
qnet-sharding = { path = "../core/qnet-sharding" }
qnet-integration = { path = "../development/qnet-integration" }

# Async runtime
tokio = { version = "1.46", features = ["full", "test-util"] }
futures = "0.3"

# Testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
pretty_assertions = "1.3"
colored = "2.0"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
hex = "0.4"
rand = "0.9"

# Storage
rocksdb = "0.21"
tempfile = "3.8"

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# Logging
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
# Additional test dependencies
serial_test = "2.0"  # For sequential test execution
test-case = "3.0"    # For parameterized tests

[[test]]
name = "storage_audit"
path = "tests/storage_audit.rs"

[[test]]
name = "reputation_audit"
path = "tests/reputation_audit.rs"

[[test]]
name = "consensus_audit"
path = "tests/consensus_audit.rs"

[[test]]
name = "consensus_scalability"
path = "tests/consensus_scalability_tests.rs"

[[bench]]
name = "storage_benchmarks"
harness = false
path = "01_storage/benchmarks.rs"

[[bench]]
name = "reputation_benchmarks"
harness = false
path = "02_reputation/benchmarks.rs"

[profile.test]
opt-level = 2  # Optimize tests for better performance

[profile.bench]
debug = true   # Include debug info in benchmarks
