[package]
name = "qnet-consensus"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "High-performance consensus mechanism for QNet blockchain"
license = "MIT"

[lib]
name = "qnet_consensus"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.75"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Cryptography - modern production versions
blake3 = "1.5.0"
ed25519-dalek = { version = "2.0.0", features = ["std"] }
curve25519-dalek = "4.1.3"
rand = "0.8.5"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Time handling
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Network
bytes = "1.5"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
python = ["pyo3", "pyo3-asyncio"]

[[bench]]
name = "consensus_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3 