[package]
name = "qnet-consensus"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "High-performance consensus mechanism for QNet blockchain"
license = "MIT"

[lib]
name = "qnet_consensus"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core QNet state management
qnet-state = { path = "../qnet-state" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.75"
futures = "0.3"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Cryptography - Quantum-resistant algorithms for production
blake3 = "1.5.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"
base64 = "0.22"

# CRYSTALS-Dilithium for quantum-resistant signatures
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# Random number generation
rand = "0.8.5"

# Error handling
thiserror = "1.0.56"

# Logging
log = "0.4.20"

# Time utilities
chrono = { version = "0.4.31", features = ["serde"] }

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Network
bytes = "1.5"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = ["production"]  # PRODUCTION: Enable quantum-resistant crypto by default
python = ["pyo3", "pyo3-asyncio"]
real-dilithium = ["pqcrypto-dilithium", "pqcrypto-traits"]
production = ["real-dilithium"]

[[bench]]
name = "consensus_bench"
harness = false 