[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qnet-consensus"
version = "0.1.0"
description = "Python bindings for QNet consensus mechanism"
authors = [
    {name = "QNet Team", email = "team@qnet.io"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/qnet/qnet-consensus"
Repository = "https://github.com/qnet/qnet-consensus"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "qnet_consensus" 