[package]
name = "qnet-core"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "Core blockchain engine for QNet"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.75"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Cryptography - modern production versions
ed25519-dalek = { version = "2.0.0", features = ["std"] }
curve25519-dalek = "4.1.3"
blake3 = "1.5.0"
sha2 = "0.10.8"
hex = "0.4.3"

# Post-quantum cryptography - production ready with latest versions
pqcrypto = "0.18"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.7"
pqcrypto-falcon = "0.3"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"

# Additional crypto for production
sha3 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Logging
tracing = "0.1.40"

# Utils
rand = "0.8.5"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }

[lib]
name = "qnet_core"
path = "src/lib.rs"

[features]
default = ["post-quantum", "classical"]
post-quantum = []
classical = []
python = []
c-bindings = []
std = [] 