[package]
name = "qnet-mempool"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "Transaction mempool for QNet blockchain"
license = "MIT"

[lib]
name = "qnet_mempool"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
qnet-state = { path = "../qnet-state" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.75"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
priority-queue = "1.4"

# Time handling
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }

# Cryptography - modern production versions
blake3 = "1.5.0"
ed25519-dalek = { version = "2.0.0", features = ["std"] }
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
hex = "0.4.3"

# Utilities
rayon = "1.10"

# Error handling  
thiserror = "1.0.56"
anyhow = "1.0.79"

# Logging
tracing = "0.1.40"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8.1"

[features]
default = []
python = ["pyo3"]

[[bench]]
name = "mempool_bench"
harness = false 