[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qnet-state"
version = "0.1.0"
description = "High-performance blockchain state management for QNet"
authors = [
    {name = "QNet Team", email = "team@qnet.io"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
module-name = "qnet_state" 