[package]
name = "qnet-integration"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "Integration layer to connect all QNet modules"

[[bin]]
name = "qnet-node"
path = "src/bin/qnet-node.rs"



[dependencies]
# Async runtime - production ready with full features
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.74"

# Storage - high performance blockchain database
rocksdb = "0.21"

# Serialization - blockchain data handling
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"

# Advanced logging and monitoring - production observability
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Error handling - production reliability and debugging
thiserror = "1.0.50"
anyhow = "1.0.75"

# Cryptography - blockchain security critical
ed25519-dalek = "1.0.1"
blake3 = "1.4.1"
hex = "0.4.3"
sha2 = "0.10.8"
sha3 = "0.10.8"

# Time handling - blockchain timestamps and scheduling
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }

# Network and logging - production environment
log = "0.4.20"
env_logger = "0.10.1"

# RPC server - blockchain API and external interfaces
warp = "0.3.6"
num_cpus = "1.16"

# Additional blockchain utilities
rand = "0.8.5"
clap = { version = "4.4.8", features = ["derive"] }
lz4_flex = "0.11.1"

[dev-dependencies]
tempfile = "3.8.1" 