[package]
name = "qnet-integration"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "QNet blockchain integration node"
license = "MIT"

[lib]
name = "qnet_integration"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local dependencies
qnet-core = { path = "../../core/qnet-core" }
qnet-state = { path = "../../core/qnet-state" }
qnet-consensus = { path = "../../core/qnet-consensus" }
qnet-mempool = { path = "../../core/qnet-mempool" }
qnet-sharding = { path = "../../core/qnet-sharding" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.75"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Cryptography - modern production versions
blake3 = "1.5.0"
ed25519-dalek = { version = "2.0.0", features = ["std"] }
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
hex = "0.4.3"

# Networking
libp2p = "0.53"
multiaddr = "0.18"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Utilities
rayon = "1.10"
rand = "0.8.5"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Network framework
bytes = "1.5"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8.1"

[features]
default = []
python = []

[[bench]]
name = "integration_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "qnet-node"
path = "src/bin/main.rs" 