[package]
name = "qnet-integration"
version = "0.1.0"
edition = "2021"
authors = ["QNet Team"]
description = "QNet blockchain integration node"
license = "MIT"

[lib]
name = "qnet_integration"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "poh_benchmark"
harness = false

[[bench]]
name = "full_benchmark"
harness = false

[dependencies]
# QNet core modules - NOW EXIST!
qnet-core = { path = "../../core/qnet-core" }
qnet-state = { path = "../../core/qnet-state" }
qnet-consensus = { path = "../../core/qnet-consensus" }
qnet-mempool = { path = "../../core/qnet-mempool" }
qnet-sharding = { path = "../../core/qnet-sharding" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.75"
futures = "0.3"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Configuration already included above

# Cryptography - modern production versions with edition constraints
blake3 = "1.5.0"
ed25519-dalek = { version = "2.0.0", features = ["std", "rand_core"] }
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
hex = "0.4.3"
base64ct = "1.5.0"

# Post-quantum cryptography
pqcrypto = "0.18"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# RSA for FCM V1 API JWT signing
rsa = { version = "0.9", features = ["sha2", "pem"] }
aes-gcm = "0.10"
zeroize = { version = "1.6", features = ["derive"] }
rand_chacha = "0.3"
tempfile = "3.8"
base64 = "0.21"
lazy_static = "1.4"
chacha20poly1305 = "0.10"
aead = "0.5"

# Lock-free data structures for millions of nodes
dashmap = "5.5"

# Networking
libp2p = "0.53"
multiaddr = "0.18"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart", "blocking"] }
lz4_flex = "0.11"
chrono = { version = "0.4", features = ["serde"] }
# FCM push notifications for Light nodes
fcm = "0.9"

# Data structures
parking_lot = "0.12"
crossbeam = "0.8"

# Storage
rocksdb = "0.21"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Utilities
rayon = "1.10"
rand = "0.8.5"
dirs = "5.0"
url = "2.5"

# Reed-Solomon erasure coding for Turbine
reed-solomon-erasure = "6.0"

# HTTP client
bs58 = "0.5"

 # Solana RPC integration via HTTP (no OpenSSL dependency)
# Using reqwest for direct JSON-RPC calls to Solana network

# Development and debugging
log = "0.4.20"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }
env_logger = "0.10.0"

# Metrics
prometheus = "0.13"

# Network framework
bytes = "1.5"

# Web framework for RPC
actix-web = "4.4"
actix-cors = "0.7"
warp = "0.3.7"

# CLI
clap = { version = "4.4.0", features = ["derive"] }
atty = "0.2"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.8.1"

# Production build profiles are defined in workspace Cargo.toml

[features]
default = []
python = []

[[bin]]
name = "qnet-node"
path = "src/bin/qnet-node.rs" 
