[package]
name = "qnet-dilithium-wasm"
version = "1.0.0"
edition = "2021"
authors = ["QNet Team"]
description = "CRYSTALS-Dilithium3 WASM bindings for React Native"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Post-quantum cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

