[package]
name = "onedev_burn_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1" 

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = []
