[workspace]

[package]
name = "simple-burn-tracker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_burn_tracker"

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1", features = ["full"] } 